--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -38,6 +38,7 @@ jobs:
           version: npm run version
           # Runs changesets on publish - will create tags and deploy to NPM
           publish: npm run publish
+          cwd: $GITHUB_WORKSPACE
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.LOGAN_NPM_PUBLISHING_TOKEN }}
