--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -19,39 +19,15 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v4
 
-      - name: Debug
-        run: |
-          pwd;
-          echo $GITHUB_WORKSPACE;
-          echo ${{github.workspace}};
-
       - name: Setup Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: Debug
-        run: |
-          pwd;
-          echo $GITHUB_WORKSPACE;
-          echo ${{github.workspace}};
-
       - uses: bahmutov/npm-install@v1
-
-      - name: Debug
-        run: |
-          pwd;
-          echo $GITHUB_WORKSPACE;
-          echo ${{github.workspace}};
           
       - name: Build
         run: npm run build
-
-      - name: Debug
-        run: |
-          pwd;
-          echo $GITHUB_WORKSPACE;
-          echo ${{github.workspace}};
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
@@ -62,7 +38,8 @@ jobs:
           version: npm run version
           # Runs changesets on publish - will create tags and deploy to NPM
           publish: npm run publish
-          cwd: $GITHUB_WORKSPACE
+          # From $GITHUB_WORKSPACE -- we should do this better
+          cwd: /__w/raisins/raisins
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.LOGAN_NPM_PUBLISHING_TOKEN }}
