--- a/.github/workflows/merge-to-main.yml
+++ b/.github/workflows/merge-to-main.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
+        env:
+          HOME: /root
         
       - name: Create Release Pull Request or Publish to npm
         id: changesets
