Add extra install step for playwright dependencies

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -27,11 +27,12 @@ jobs:
           node-version: 20.x
 
       - uses: bahmutov/npm-install@v1
-        with:
-          # We can't use our lockfile, because of platform-specific optional dependencies in Vite
-          # https://github.com/npm/cli/issues/4828
-          # Will create errors like: `Error: Cannot find module @rollup/rollup-linux-x64-gnu.`
-          useLockFile: false
+
+        # Because of platform-specific optional dependencies in Vite
+        # https://github.com/npm/cli/issues/4828
+        # Will create errors like: `Error: Cannot find module @rollup/rollup-linux-x64-gnu.`
+      - name: Install Playwright Browsers
+        run: npx playwright install
 
       - name: Lint (via Turbo)
         run: npm run lint
