--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "@changesets/cli": "^2.27.1",
     "turbo": "^1.13.3"
   },
-  "dependencies": {}
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.18.0"
+  }
 }
