--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,6 +30,12 @@
     "test": "run-p test:*",
     "test:vitest": "vitest run",
     "test:playwright": "playwright test",
+    "test:storybook": "run-s storybook:build test:storybook:test-runner",
+    "test:storybook:test-runner": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm:serve-storybook\" \"npm:test-storybook\"",
+    "serve-storybook": "npx http-server .out --port 6600 --silent",
+    "test-storybook": "run-s test-storybook:*",
+    "test-storybook:wait": "npx wait-on tcp:6600",
+    "test-storybook:run": "test-storybook --url http://localhost:6600",
     "lint": "eslint src",
     "size": "size-limit",
     "analyze": "size-limit --why",
@@ -87,6 +93,7 @@
     "@storybook/cli": "^8.0.10",
     "@storybook/react": "^8.0.10",
     "@storybook/react-vite": "^8.0.10",
+    "@storybook/test-runner": "^0.18.1",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^29.1.0",
@@ -102,6 +109,7 @@
     "@types/styled-components": "^5.1.14",
     "@types/throttle-debounce": "^5.0.0",
     "babel-loader": "^8.2.2",
+    "concurrently": "^8.2.2",
     "custom-elements-manifest": "^1.0.0",
     "dts-cli": "^1.5.1",
     "eslint": "^8.57.0",
