Update storybook dependencies

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -32,7 +32,7 @@
     "test:playwright": "playwright test",
     "test:storybook": "run-s storybook:build test:storybook:test-runner",
     "test:storybook:test-runner": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm:serve-storybook\" \"npm:test-storybook\"",
-    "serve-storybook": "npx http-server .out --port 6600 --silent",
+    "serve-storybook": "npx http-server .out --port 6600 --silent --cors",
     "test-storybook": "run-s test-storybook:*",
     "test-storybook:wait": "npx wait-on tcp:6600",
     "test-storybook:run": "test-storybook --url http://localhost:6600",
@@ -64,7 +64,7 @@
   "dependencies": {
     "@raisins/core": "^1.1.3",
     "@raisins/schema": "^1.0.0",
-    "bunshi": "^2.1.4",
+    "bunshi": "^2.1.5",
     "css-tree": "^1.1.3",
     "fast-equals": "^5.0.1",
     "hotkeys-js": "^3.8.7",
@@ -89,7 +89,6 @@
     "@mdx-js/react": "^2.1.1",
     "@playwright/test": "^1.44.0",
     "@size-limit/preset-small-lib": "^5.0.4",
-    "@storybook/addons": "^7.6.17",
     "@storybook/cli": "^8.0.10",
     "@storybook/react": "^8.0.10",
     "@storybook/react-vite": "^8.0.10",
