--- a/packages/stencil-docs-target/package.json
+++ b/packages/stencil-docs-target/package.json
@@ -66,6 +66,6 @@
   },
   "homepage": "https://github.com/saasquatch/raisins",
   "dependencies": {
-    "@raisins/schema": "1.0.1"
+    "@raisins/schema": "^1.0.1"
   }
 }
