--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.2.2-1",
+  "version": "1.2.2-7",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -54,14 +54,16 @@
     }
   ],
   "dependencies": {
-    "@storybook/cli": "^7.0.21",
     "@raisins/core": "^1.1.4",
     "@raisins/schema": "^1.1.0",
+    "@storybook/cli": "^7.0.21",
     "bunshi": "~2.0.2",
     "css-tree": "^1.1.3",
     "fast-equals": "^5.0.1",
     "hotkeys-js": "^3.8.7",
-    "jotai": "^1.6.0",
+    "jotai": "^2.8.4",
+    "jotai-optics": "^0.4.0",
+    "jotai-zustand": "^0.4.0",
     "jsonpointer": "^5.0.0",
     "optics-ts": "^2.2.0",
     "penpal": "^6.1.0",
@@ -74,7 +76,7 @@
     "style-to-object": "^0.3.0",
     "throttle-debounce": "^5.0.0",
     "valtio": "^1.5.2",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -107,7 +109,7 @@
     "globals": "^15.2.0",
     "jest-environment-jsdom": "^29.1.0",
     "local-cypress": "^1.2.5",
-    "react": "*",
+    "react": "^18.3.1",
     "react-dom": "^16.14.0",
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
