--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.2.1",
+  "version": "1.2.2-15",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -64,13 +64,13 @@
     "jotai": "^1.6.0",
     "jsonpointer": "^5.0.0",
     "optics-ts": "^2.2.0",
-    "penpal": "^6.1.0",
+    "penpal": "^6.2.2",
     "prosemirror-commands": "^1.1.11",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-schema-basic": "^1.1.2",
     "prosemirror-state": "^1.3.4",
     "prosemirror-view": "^1.20.2",
-    "snabbdom": "^3.5.1",
+    "snabbdom": "^3.6.2",
     "style-to-object": "^0.3.0",
     "throttle-debounce": "^5.0.0",
     "valtio": "^1.5.2",
