--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.2.2-15",
+  "version": "1.2.1",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -54,9 +54,9 @@
     }
   ],
   "dependencies": {
-    "@storybook/cli": "^7.0.21",
     "@raisins/core": "^1.1.4",
     "@raisins/schema": "^1.1.0",
+    "@storybook/cli": "^7.0.21",
     "bunshi": "~2.0.2",
     "css-tree": "^1.1.3",
     "fast-equals": "^5.0.1",
