--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,13 +25,13 @@
   },
   "scripts": {
     "start": "dts watch",
-    "dev:tests": "vitest",
+    "test:watch": "vitest",
     "build": "dts build",
-    "test": "run-p test:*",
-    "test:vitest": "vitest run",
-    "test:playwright": "playwright test",
-    "test:storybook": "run-s storybook:build test:storybook:test-runner",
-    "test:storybook:test-runner": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm:serve-storybook\" \"npm:test-storybook\"",
+    "test": "run-p test-ci:*",
+    "test-ci:vitest": "vitest run",
+    "test-ci:playwright": "playwright test",
+    "test-ci:storybook": "run-s storybook:build test:storybook:test-runner",
+    "test-ci:storybook:test-runner": "npx concurrently -k -s first -n \"SB,TEST\" -c \"magenta,blue\" \"npm:serve-storybook\" \"npm:test-storybook\"",
     "serve-storybook": "npx http-server .out --port 6600 --silent --cors",
     "test-storybook": "run-s test-storybook:*",
     "test-storybook:wait": "npx wait-on tcp:6600",
