--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
-    "turbo": "^1.13.3"
+    "turbo": "^2.0.3"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.18.0"
-  }
+  },
+  "packageManager": "npm@10.5.0"
 }
