--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.2.2-8",
+  "version": "1.2.2-16",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -109,7 +109,7 @@
     "globals": "^15.2.0",
     "jest-environment-jsdom": "^29.1.0",
     "local-cypress": "^1.2.5",
-    "react": "^18.3.1",
+    "react": "*",
     "react-dom": "^16.14.0",
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
