--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -36,7 +36,7 @@
   },
   "peerDependencies": {
     "jotai": "^2.0.0",
-    "react": "^16.13.0 || ^17.0.0 || ^18.0.0"
+    "react": "^17.0.0 || ^18.0.0"
   },
   "prettier": {
     "printWidth": 80,
