--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -87,7 +87,7 @@
     "@storybook/cli": "^7.0.21",
     "@storybook/react": "^7.0.21",
     "@storybook/react-vite": "^7.5.3",
-    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react": "^14.1.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^29.1.0",
     "@types/prosemirror-commands": "^1.0.4",
