--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -95,8 +95,8 @@
     "@types/prosemirror-schema-basic": "^1.0.2",
     "@types/prosemirror-state": "^1.2.7",
     "@types/prosemirror-view": "^1.19.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "18",
+    "@types/react-dom": "^18.3.0",
     "@types/resize-observer-browser": "^0.1.7",
     "@types/styled-components": "^5.1.14",
     "@types/throttle-debounce": "^5.0.0",
