--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -35,7 +35,8 @@
     "storybook:build": "storybook build -c .storybook -o .out"
   },
   "peerDependencies": {
-    "react": "^16.13.0 || ^17.0.0"
+    "jotai": "^2.0.0",
+    "react": "^17.0.0 || ^18.0.0"
   },
   "prettier": {
     "printWidth": 80,
@@ -61,7 +62,8 @@
     "css-tree": "^1.1.3",
     "fast-equals": "^5.0.1",
     "hotkeys-js": "^3.8.7",
-    "jotai": "^1.6.0",
+    "jotai-optics": "^0.4.0",
+    "jotai-zustand": "^0.4.0",
     "jsonpointer": "^5.0.0",
     "optics-ts": "^2.2.0",
     "penpal": "^6.2.2",
@@ -74,7 +76,7 @@
     "style-to-object": "^0.3.0",
     "throttle-debounce": "^5.0.0",
     "valtio": "^1.5.2",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -85,7 +87,7 @@
     "@storybook/cli": "^7.0.21",
     "@storybook/react": "^7.0.21",
     "@storybook/react-vite": "^7.5.3",
-    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react": "^14.1.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^29.1.0",
     "@types/prosemirror-commands": "^1.0.4",
@@ -93,8 +95,8 @@
     "@types/prosemirror-schema-basic": "^1.0.2",
     "@types/prosemirror-state": "^1.2.7",
     "@types/prosemirror-view": "^1.19.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "18",
+    "@types/react-dom": "^18.3.0",
     "@types/resize-observer-browser": "^0.1.7",
     "@types/styled-components": "^5.1.14",
     "@types/throttle-debounce": "^5.0.0",
@@ -108,7 +110,7 @@
     "jest-environment-jsdom": "^29.1.0",
     "local-cypress": "^1.2.5",
     "react": "*",
-    "react-dom": "^16.14.0",
+    "react-dom": "^18.3.1",
     "react-hooks-testing-library": "^0.6.0",
     "react-is": "^17.0.2",
     "size-limit": "^5.0.4",
