--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "pify": "^6.1.0",
     "turbo": "^1.13.3"
-  },
-  "dependencies": {}
+  }
 }
