--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/core",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "Core functions for manipulating and validating HTML and raisin nodes",
-  "version": "1.1.5-1",
+  "version": "1.1.4",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/core.esm.js",
