--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@raisins/schema",
-  "version": "1.1.1-0",
+  "version": "1.1.0",
   "description": "Types (a.k.a. schema) for the Raisins ecosystem",
   "author": "ReferralSaaSquatch.com, Inc.",
   "license": "MIT",
