--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -73,7 +73,7 @@
     "typescript": "^3.9.10"
   },
   "dependencies": {
-    "@raisins/schema": "^1.1.1-0",
+    "@raisins/schema": "^1.1.1",
     "color2k": "^2.0.0",
     "css": "^3.0.0",
     "css-select": "^5.1.0",
