--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,7 +2,7 @@
   "name": "@raisins/react",
   "author": "ReferralSaaSquatch.com, Inc.",
   "description": "React package with tools for building a Raisins editor",
-  "version": "1.3.1",
+  "version": "1.3.2-3",
   "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/react.esm.js",
@@ -67,11 +67,12 @@
     "jsonpointer": "^5.0.0",
     "optics-ts": "^2.2.0",
     "penpal": "^6.2.2",
-    "prosemirror-commands": "^1.1.11",
-    "prosemirror-keymap": "^1.1.4",
-    "prosemirror-schema-basic": "^1.1.2",
-    "prosemirror-state": "^1.3.4",
-    "prosemirror-view": "^1.20.2",
+    "prosemirror-commands": "^1.6.2",
+    "prosemirror-keymap": "^1.2.2",
+    "prosemirror-model": "^1.23.0",
+    "prosemirror-schema-basic": "^1.2.3",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-view": "^1.35.0",
     "snabbdom": "^3.6.2",
     "style-to-object": "^0.3.0",
     "throttle-debounce": "^5.0.0",
@@ -90,11 +91,11 @@
     "@testing-library/react": "^14.1.2",
     "@types/css-tree": "^1.0.6",
     "@types/jest": "^29.1.0",
-    "@types/prosemirror-commands": "^1.0.4",
-    "@types/prosemirror-keymap": "^1.0.4",
-    "@types/prosemirror-schema-basic": "^1.0.2",
-    "@types/prosemirror-state": "^1.2.7",
-    "@types/prosemirror-view": "^1.19.1",
+    "@types/prosemirror-commands": "^1.3.0",
+    "@types/prosemirror-keymap": "^1.2.0",
+    "@types/prosemirror-schema-basic": "^1.2.0",
+    "@types/prosemirror-state": "^1.4.0",
+    "@types/prosemirror-view": "^1.24.0",
     "@types/react": "18",
     "@types/react-dom": "^18.3.0",
     "@types/resize-observer-browser": "^0.1.7",
@@ -119,6 +120,7 @@
     "tslib": "^2.3.1",
     "typescript": "^4.4.3",
     "typescript-eslint": "^7.8.0",
+    "vite": "^4.5.5",
     "vitest": "^1.6.0"
   },
   "bugs": {
